# phi

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: build-android-release.yml  build-daemon-binaries.yml  build-windows-client-release.yml
crates/phi-daemon/: Cargo.toml  README.md
crates/phi-daemon/src/: config.rs  connection_qr.rs  lib.rs  main.rs  scheduled_task.rs  server.rs  service.rs  session_title.rs  telemetry.rs
crates/phi-daemon/src/api/: auth.rs  dto.rs  http.rs  mod.rs  scheduled_task.rs  workspace.rs  ws.rs
crates/phi-daemon/src/runtime/: actor.rs  agent_profile.rs  ask_user.rs  factory.rs  id.rs  mod.rs  plan_approval.rs  registry.rs  tool_permission.rs  worktree.rs
crates/phi-daemon/src/store/: agent_profile.rs  disk.rs  memory.rs  mod.rs  provider.rs  scheduled_task.rs
crates/phi-daemon/tests/: scheduled_task_runtime.rs  session_runtime.rs  session_title_runtime.rs  skills_runtime.rs
examples/: agent.rs  basic.rs  vision.rs
flutter/: .metadata  README.md  pubspec.yaml
flutter/android/app/: build.gradle.kts
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: app.dart  main.dart
flutter/lib/i18n/: strings.dart
flutter/lib/platform/: image_attachment_picker.dart  qr_scan_support.dart
flutter/lib/state/: app_state.dart  daemon_client.dart  session_controller.dart  sessions_store.dart
flutter/lib/ui/: home_shell.dart  theme.dart
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/ohos/: .gitignore  build-profile.template.json5  oh-package.json5
flutter/ohos/AppScope/: app.json5
flutter/ohos/entry/: oh-package.json5
flutter/test/: app_settings_machines_test.dart  chat_scroll_test.dart  composer_layout_test.dart  connection_payload_test.dart  daemon_smoke_test.dart  machine_connection_test.dart  machine_switcher_test.dart  machines_page_test.dart  permission_card_test.dart  qr_scan_entry_test.dart  workspace_picker_test.dart
flutter/tool/ohos/: patch_impellerc_macos_arm64.sh
flutter/windows/: CMakeLists.txt
flutter/windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  utils.cpp  (+4 more)
pi-ext/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
pi-ext/src/: ask-user.ts  auth.ts  cli.ts  config.ts  control-store.ts  errors.ts  index.ts  json-store.ts  pi-session.ts  projection.ts  protocol.ts  provider-manager.ts  scheduled-tasks.ts  server.ts  service.ts  session-actor.ts  tool-permission.ts  workspace.ts
pi-ext/test/: ask-user.test.ts  auth.test.ts  config.test.ts  pi-session.test.ts  projection.test.ts  protocol.test.ts  server.test.ts  service-fork.test.ts  session-actor.test.ts  tool-permission.test.ts  workspace.test.ts
src/: agent.rs  context.rs  error.rs  hook.rs  lib.rs  mcp.rs  permission.rs  plan.rs  storage.rs  tool.rs  types.rs  workspace.rs
src/context/: default_compactor.rs
src/provider/: anthropic.rs  mod.rs  openai_chat.rs  openai_responses.rs  retry.rs
src/skills/: catalog.rs  config.rs  mod.rs  tool.rs
src/subagent/: mod.rs  runtime.rs
src/tool/: subagent.rs
web/: biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.module.css  App.tsx  globals.css  main.tsx  prefs.ts
(+122 files in other folders)
