[workspace]
members = ["crates/phi-daemon"]
resolver = "3"

[package]
name = "phi"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
async-stream = "0.3.6"
base64 = "0.22"
eventsource-stream = "0.2.3"
fastrand = "2"
futures-util = "0.3"
httpdate = "1"
libc = "0.2"
rmcp = { version = "2.2", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "process", "rt", "sync", "time"] }

[dev-dependencies]
dotenvy = "0.15"
rmcp = { version = "2.2", default-features = false, features = ["server"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
