[package]
name = "phi-daemon"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1"
axum = { version = "0.8.9", features = ["ws"] }
base64 = "0.22"
futures-util = "0.3"
getrandom = "0.3"
phi = { path = "../.." }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.5", features = ["serde", "v7"] }
