[package]
name = "phi-daemon"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1"
axum = { version = "0.8.9", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4.45", features = ["serde"] }
chrono-tz = "0.10"
futures-util = "0.3"
getrandom = "0.3"
if-addrs = "0.15.0"
phi = { path = "../.." }
qrcode = { version = "0.14.1", default-features = false }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = "0.26.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.5", features = ["serde", "v7"] }

[dev-dependencies]
rcgen = "0.14.8"
tempfile = "3"
